<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uni.notes.OneFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="16sp"
        android:id="@+id/text_help"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/text_border"
        android:layout_below="@+id/text_help"
        android:layout_marginTop="20dp"
        android:id="@+id/prof_layout"
        android:padding="20dp">

        <TextView
            android:id="@+id/textEditUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textEditUni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fInput"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textEditSem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sInput"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textEditOwed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>
    </LinearLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/prof_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp" />

</RelativeLayout>