<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uni.notes.MainActivity"
    tools:showIn="@layout/activity_main"
    android:clickable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textUser"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:paddingBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:maxLines="1"
        android:id="@+id/editUserName"
        android:background="@drawable/edit_text"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/textUser"
        android:layout_toEndOf="@+id/lastInput2"
        android:layout_toRightOf="@+id/lastInput2"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"/>

    <TextView
        android:id="@+id/firstInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fInput"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:layout_below="@+id/textUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/editFirstInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:maxLines="1"
        android:background="@drawable/edit_text"
        android:layout_alignBottom="@+id/firstInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editUserName"
        android:layout_alignStart="@+id/editUserName"
        android:textColor="@color/white"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/secondInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sInput"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:layout_below="@+id/firstInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/editSecondInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:background="@drawable/edit_text"
        android:layout_alignBottom="@+id/secondInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editFirstInput"
        android:layout_alignStart="@+id/editFirstInput"
        android:textColor="@color/white"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/editl1Input"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_alignBottom="@+id/lastInput1"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_alignStart="@+id/spinner2"
        android:maxLines="1"
        android:textColor="@color/white"
        android:background="@drawable/edit_text"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/buttonTrans1"
        android:src="@drawable/next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/editSecondInput"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editSecondInput"
        android:onClick="transButtonHandler"
        android:text="@string/button1"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/num_of_sub"
        android:layout_alignTop="@+id/lastInput2"
        android:layout_toRightOf="@+id/lastInput2"
        android:layout_toEndOf="@+id/lastInput2"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"/>

    <TextView
        android:id="@+id/classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tInput"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/lastInput1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lastInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l2Input"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:layout_above="@+id/buttonTrans1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />

    <TextView
        android:id="@+id/lastInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l1Input"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/lastInput2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>